--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style> body { margin: 0 !important; background-color: #1f1f1f;} </style>
   </head>
-  <body style="background-color:#F9F5FF;">
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+  <body style="background-color:#1f1f1f;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
